# OTA_Client

./: Cargo.toml  README.md  deploy_to_rpi.sh
config/: client.toml
doc/: DEPLOYMENT.md  build.sh  deploy_to_rpi.sh  install_to_rpi.sh  ota_client_readme.md
src/: config.rs  daemon.rs  downloader.rs  installer.rs  lib.rs  main.rs  types.rs
systemd/: ota-client.service
